argo-events-yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-webhook
  namespace: argo-events
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /example
          pathType: Prefix
          backend:
            service:
              name: webhook-eventsource-svc
              port:
                number: 12000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sns
  namespace: argo-events
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: aws-sns-eventsource-svc
              port:
                number: 12000
---
